# turing-machine-compiler

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  compiler_invert_test  full_invert_test  invert_test  test_tape  test_tm  tm-cli
examples/: add.mt  compiler_add_test.cpp  compiler_invert_test.cpp  full_invert_test.cpp  invert.mt  invert_while.mt  macros_test.cpp  test_tape.cpp  turing_machine_test.cpp
include/: ast.h  compiler.h  gui_render.h  lexer.h  macros.h  parser.h  rule.h  state_generator.h  state_genetaror.h  tape.h  tm_format.h  tm_program.h  token.h  turing_machine.h
src/: cli_main.cpp  compiler.cpp  gui_main.cpp  gui_render.cpp  lexer.cpp  macros.cpp  parser.cpp  tape.cpp  tm_format.cpp  turing_machine.cpp
